src/test/deca/syntax/invalid/testNoBraces1.deca
// this is a test without { and }
// Result : Error
// every deca file should start with { and close with }

int x = 5;
float y = 4.0;
print(x);
